2005-01-19  Sushma Rai  <rsushma@novell.com>

	* camel/camel-exchange-provider.c: Added one more parameter to
	user validation function, for reading remember password flag value.

	* lib/e2k-validate.h: Similar.

	* lib/e2k-autoconfig.c (e2k_validate_user): Forming the password hash
	key once we read the hostname. And remembering the password if the 
	user is a valid user, so that account setup will not prompt for
	password second time at the end.

	* storage/exchange-account.c (get_password): If the password is 
	remembered, and user has not sleceted remember password option,
	forgetting the password remembered.
	 
2005-01-18  Sushma Rai  <rsushma@novell.com>

	* lib/e2k-autoconfig.c (validate): Handling error coders, and
	displaying warning messages when user is not authenticated
	to the server. Fixes #71389
	(e2k_validate_user): In case of wrong credentials forgetting the
	password so that, password dialog pops up when user presses
	OK button without changing any input values. 

2005-01-18  Sarfraaz Ahmed <asarfraaz@novell.com>
	
	* calendar/e-cal-backend-exchange-calendar.c : Ordered the code to now
	build the proper mime message for attachments to be sent to the server.
	* calendar/e-cal-backend-exchange-tasks.c : Fixed some warnings	
	* calendar/e-cal-backend-exchange.c : Re-ordered some code and fixed
	some warnings.

2005-01-17  Sushma Rai  <rsushma@novell.com>

	* camel/camel-exchange-provider.c: Moved password expiry warning 
	period and offline sync options under one section.

2005-01-16  Sarfraaz Ahmed <asarfraaz@novell.com>

	* calendar/e-cal-backend-exchange-calendar.c : Fixed the add_ical and
	get_changed_events functions to now geenrically fetch the attachments
	created either from Outlook or OWA.

2005-01-16  Sarfraaz Ahmed <asarfraaz@novell.com>

	* calendar/e-cal-backend-exchange-calendar.c (modify_object_with_href):
	Fixed a memory leak causing a crash on modifying an appointment.

2005-01-15  Sushma Rai  <rsushma@novell.com>
