@@ -1,3 +1,12 @@
+2005-01-20  Sarfraaz Ahmed <asarfraaz@novell.com>
+	
+	* calendar/e-cal-backend-exchange-calendar.c : Add a check to not fetch
+	data from server in offline mode.
+	* calendar/e-cal-backend-exchange.c : Modify the error message string.
+	* storage/e-folder-exchange.c : This is a hack right now. A better fix
+	needs to be done down the line.
+	* storage/exchange-offline-listener.c : Minor argument checks.
+
 2005-01-19  Sushma Rai  <rsushma@novell.com>
 
 	* camel/camel-exchange-provider.c: Added one more parameter to
